--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,16 @@ mybatis.configuration.use-generated-keys=true
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # logger
-logging.level.com.nowcoder.community=debug
+#logging.level.com.nowcoder.community=debug
+
+# MailProperties
+spring.mail.host=smtp.163.com
+spring.mail.port=465
+spring.mail.username=19176655540@163.com
+spring.mail.password=BYRMCVUAMYVGBBFW
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+# community
+community.path.domain=http://localhost:8080
+
