--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,7 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 
 # community
 community.path.domain=http://localhost:8080
+community.path.upload=/Users/gaomin/Desktop/project/data/upload
+
+
 
