--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+
 
 	</dependencies>
 
